--- a/pagina2.html
+++ b/pagina2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,17 @@
     <title>Borja Estevez</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
+
 <body id="pag2">
-    <a href="/TrabajoT3_Borja/index.html"><h1>index</h1></a>
-    <a href="/TrabajoT3_Borja/pagina2.html"><h1>pagina2</h1></a>
-    <a href="/TrabajoT3_Borja/pagina3.html"><h1>pagina3</h1></a>
-    
+    <a href="/TrabajoT3_Borja/index.html">
+        <h3>index</h3>
+    </a>
+    <a href="/TrabajoT3_Borja/pagina2.html">
+        <h3>pagina2</h3>
+    </a>
+    <a href="/TrabajoT3_Borja/pagina3.html">
+        <h3>pagina3</h3>
+    </a>
 </body>
+
 </html>
